[package]
name = "grid-forge"
version = "0.2.0"
edition = "2021"

[lib]
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
debug = true

[features]
default = ['vis', 'gen', 'godot']
vis = ["dep:image"]
gen = ["dep:rand"]
godot = ["dep:godot"]

[dependencies]
num-traits = "*"
grid = { version = "0.13.*" }
image = { version = "0.25.*", optional = true, default-features = false }
rand = { version = "0.8.*", optional = true }
godot = { version = "^0.2.4", optional = true }

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
rand_chacha = "0.3.*"
image = { version = "0.25.*", features = ["png"]}
gif = { version ="^0.13.*" }

[[bench]]
name = "grid_bench"
harness = false

[[bench]]
name = "gen_collapse_singular"
harness = false

[[example]]
name = "gen_collapse_singular"
path = "examples/collapse/gen_collapse_singular.rs"